Correggi il link al foglio di stile nel tag noscript in header.html

--- a/header.html
+++ b/header.html
@@ -48,7 +48,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     <!-- CSS -->
     <link rel="preload" href="https://genialabile.com/live-style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://genialabile.com/live-stile.css"></noscript>
+    <noscript><link rel="stylesheet" href="https://genialabile.com/live-style.css"></noscript>
     
     <!-- Style effect graduated //
         <script>
