Migliora la logica di gestione delle classi per le pagine live e statiche in index.html e live.html

--- a/writer-guide.html
+++ b/writer-guide.html
@@ -422,7 +422,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
                 .link-live {
                     display: inline-block;
-                    color: var(--link-power);
+                    color:#00ff00;
                     font-weight: bold;
                     animation: blink 1s infinite;
                 }
