--- a/header.html
+++ b/header.html
@@ -38,8 +38,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
 
     <!-- Icons and Fonts --> 
-    <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" " type="image/x-icon">
-    <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" " type="image/png">
+    <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
+    <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
     <!-- Icons and Fonts --> 
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap"></noscript>
