--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
          
     </head>
 
-    <body class="static-page" style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
+    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
                 <a href="https://genialabile.com/" aria-label="Home Page | Static">
