Aggiungi il caricamento predefinito dei font Roboto e Inconsolata in header.html

--- a/header.html
+++ b/header.html
@@ -41,6 +41,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
     <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
     <!-- Icons and Fonts --> 
+  
+
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swapp" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"></noscript>
+   
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap"></noscript>
     <link rel="preload" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
