--- a/writer-guide.html
+++ b/writer-guide.html
@@ -387,7 +387,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         ================================ */
                 outline: 1px solid #000000; /* Per verificare se le ombre nere sono visibili */
                 
-                box-shadow: 0 -2px 10px #242424, /* Parte superiore */
+                box-shadow: 0 -2px 10px #24242420, /* Parte superiore */
                            -10px 0 300px 50px #000000,  /* Ombra sinistra (blu) */
                             10px 0 30px 50px #000000,   /* Ombra destra (blu) */
                             0 10px 60px 50px #000000;   /* Ombra inferiore (rossa) */ /* Ombra inferiore (rossa) */       /* Elimina tutte le altre parti */
