--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 <!--// STARTLINE & SAY HI //--->
 
-    <p class="imp-p txt-mini"></p>
+    <p class="imp-p txt-mini">
         © 2025 GENiALABILE by seiseisette. All Rights Reserved.
          <!--
         © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
