Correggi il tag di apertura del paragrafo in footer.html e aggiungi regole di stile per il footer in writer-guide.html

--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 <!--// STARTLINE & SAY HI //--->
 
-    <p class="imp-p txt-mini">
+    <p class="imp-p" font-size=0.9rem">
         © 2025 GENiALABILE by seiseisette. All Rights Reserved.
          <!--
         © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
