Correggi il tag di apertura del paragrafo in footer.html e aggiorna le regole di stile per il footer in writer-guide.html

--- a/writer-guide.html
+++ b/writer-guide.html
@@ -171,13 +171,18 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     #footer-banner {
                         padding: var(--spacing);
                         /* padding-right: 0%; */
-                        font-size: 0.7rem;
+                        font-size: 0.9rem;
                 }
 
                 /* Media query per schermi ultra-stretti */
                 @media screen and (max-width: 480px) {
                     body {
                         font-size: 12px;
+                    }
+                    #footer-banner {
+                        padding: var(--spacing);
+                        /* padding-right: 0%; */
+                        font-size: 0.7rem;
                     }
                 }
                 
