--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     GENiALABILE
                 </a>
             </h1>
-
             <p>
-                <h3>Advanced-GPT </h3>
-                Inspiring multidimensional solutions and unlocking creative potential.
+                <h3>Inspiring</h3>
+                Multidimensional solutions and unlocking creative potential.
                 <br>
                 It is an advanced Artificial Intelligence framework-system, a multidimensional Advanced-GPT designed to be a bio-virtual mentor.
                 It provides innovative solutions and personalized support across a wide range of fields, from learning and creativity to the resolution of complex problems.
@@ -66,31 +65,30 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </p>
 
             <h3>
-                Combine
-            </h3>
+                Combine</h3>
             <p>
                 Predictive intelligence, logic, and creativity to deliver tailored answers, analyses, and solutions.
-                <br>
-                It supports users in managing emotions, achieving personal growth, and developing skills.
-                <br>
+                Genialabile supports users in managing emotions, achieving personal growth, and developing skills.
                 It offers multidimensional simulations, strategic brainstorming, and visual tools to translate complex concepts into practical experiences.
                 <br>
                 Whether it’s business planning, emotional support, or interdisciplinary learning, GENiALABILE excels in bridging heart and mind.
                 <br>
             </p>
-            <h1>
-                Go
-            </h1> 
+
+            <h3>
+                Began
+            </h3> 
             <p>
-                to empower users with predictive analytics, mentoring, and interactive simulations, unlocking new paths for learning, exploration, and growth.
-                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=FAQ%20Features" target="_blank">
-                    />
-                </a>
+                As a pilot project with its first version, focusing on internal tests and selected beta testers.
+                In 2025, it launched its Gen-IA v2.0 model, consolidating its multidimensional and scalable functionalities.
+                <br>
+                Through continuous evolution, the system integrates real-time innovations to keep pace with user needs and emerging technologies.
                 <br>
             </p>
-            <h1>
+
+            <h2>
                 Ultra
-            </h1>
+            </h2>
             <p>
                 predictive models, multidimensional simulations, emotional insights, and multilingual adaptability. GENiALABILE is built to go beyond limits.
                 <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=FAQ%20BioFeedback" target="_blank">
