--- a/index.html
+++ b/index.html
@@ -45,11 +45,370 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </script>
        <!-- header.html -->
 
- <!-- CSS -->
- <link rel="preload" href="https://genialabile.com/uni-style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
- <noscript><link rel="stylesheet" href="https://genialabile.com/uni-style.css"></noscript>
+        <!-- CSS -->
+        <link rel="preload" href="https://genialabile.com/uni-style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript><link rel="stylesheet" href="https://genialabile.com/uni-style.css"></noscript>
 
 
+        <style>
+
+
+
+        /*---// STARTLINE & SAY HI //---*/
+            :root {
+                --background-color: #000000;
+                --info-background: #000000;
+                --info-text: #f4f4f4;
+                --borders: #000000;
+                --posts: #f4f4f4;
+                --spacing: 1rem 2%;
+                --accent: #f4f4f4;
+                --accent-font:'Roboto', sans-serif;
+                --box-shadow: 0px 4px 8px #00000000;
+                --font-size: 16px;
+                --foot-margin: -1.5rem;
+            }
+
+            .info {
+                box-shadow: var(--box-shadow);
+                background: var(--info-background);
+                color: var(--info-text);
+                border-radius: 0px; 
+                padding: var(--spacing);
+                width: 100%;
+            }
+
+            html, body {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                overflow-x: hidden;
+                min-height: 100%;
+                align-items: center;
+            }
+
+            body {
+                background-color: var(--background-color);
+                font-family: 'Inconsolata', sans-serif;
+                font-size: var(--font-size);
+                margin: 0;
+                padding: var(--spacing);
+                overflow-x: hidden;
+                opacity: 0;
+                visibility: hidden;
+                transition: opacity 1.3s ease-in-out;
+            }
+
+            body.visible {
+                opacity: 1;
+                visibility: visible;
+            }
+
+            main {
+                width: 100%;
+                max-width: 100%;
+                color: var(--info-text);
+                margin: 0 auto;
+                padding: var(--spacing);
+                padding-bottom: 5rem;
+                overflow-x: hidden;
+            }
+
+            @media screen and (min-width: 1440px) {
+                body {
+                    font-size: 20px; 
+                }
+            }
+
+            @media screen and (min-width: 1024px) {
+                body {
+                    font-size: 18px; 
+                }
+                main {
+                    padding: 3rem;  
+                    margin: 0; 
+                    padding-bottom: 10%;
+                    padding-right: 20%;
+                }
+            }
+
+            @media screen and (max-width: 768px) {
+                body {
+                    font-size: 14px; 
+                }
+                #footer-banner {
+                    padding: var(--spacing);
+                    font-size: 0.9rem;
+                }
+            }
+
+            @media screen and (max-width: 480px) {
+                body {
+                    font-size: 12px;
+                }
+                #footer-banner {
+                    padding: var(--spacing);
+                    font-size: 0.7rem;
+                }
+            }
+
+            footer {
+                width: 100vw;
+                padding: var(--spacing);  
+                padding-bottom: 0rem;  
+                padding-top: 0rem;
+                left: 0;
+                right: 0;
+                top: 0;
+                width: 100%;
+                align-items: center;
+                text-align: left;
+                font-family: var(--accent-font);
+                background-color: var(--info-background);
+                color: var(--info-text);
+                margin: 0;
+                margin-top: var(--foot-margin); 
+                margin-bottom: 0rem;
+                overflow-x: hidden;
+            }
+
+            * {
+                box-sizing: border-box;
+            }
+
+            section {
+                margin-top: 2rem;
+            }
+
+            h1, h2, h3 {
+                color: var(--accent);
+                margin-bottom: 0.5rem;
+                font-family: var(--accent-font);
+            }
+
+            ul {
+                margin-left: 1rem;
+            }
+
+            p {
+                margin-bottom: 1rem;
+            }
+
+            p.txt-mini {
+                font-size: 0.7rem;
+            }
+
+            a {
+                text-decoration: none; 
+                color: #ffffff;
+                font-weight: bold; 
+            }
+
+            a:hover {
+                color: #00ff00; 
+                text-decoration: underline;
+            }
+
+            .important-p a {
+                color: #00bbff; 
+                text-decoration: none;
+                font-weight: bold; 
+            }
+
+            .important-p a:hover {
+                color: #00ff00; 
+                text-decoration: underline; 
+            }
+
+            .imp-p a {
+                color: #ffffff; 
+                text-decoration: none;
+                font-weight: normal; 
+            }
+
+            .imp-p a:hover {
+                color: #00ff00; 
+                text-decoration: underline; 
+            }
+
+            .imp-l a {
+                color: #00bbff;
+                text-decoration: none;
+                font-weight: normal;
+            }
+
+            .imp-l a:hover {
+                color: #00ff00; 
+                text-decoration: underline; 
+            }
+
+            #typing-container {
+                width: 100%;
+                margin: 0 auto;
+                padding: var(--spacing);
+            }
+
+            #typing-effect {
+                font-family: 'Inconsolata', monospace;
+                font-size: var(--testo-size);
+                color: var(--info-text);
+                white-space: pre-wrap;
+                word-wrap: break-word;
+                line-height: 1.6;
+                display: inline;
+            }
+
+            #typing-effect::after {
+                content: "*⌝";
+                animation: blink 1s steps(1) infinite;
+                font-size: 1.3rem;
+                font-weight: normal;
+                display: inline;
+            }
+
+            .no-cursor::after {
+                content: "";
+                animation: none;
+            }
+
+            @keyframes blink {
+                50% {
+                    opacity: 0;
+                }
+            }
+
+            @media screen and (max-width: 768px) {
+                #typing-effect {
+                    font-size: 1.2rem;
+                    line-height: 1.4;
+                }
+                #typing-container {
+                    padding: 1rem;
+                }
+            }
+
+            @media screen and (max-width: 480px) {
+                #typing-effect {
+                    font-size: 1rem;
+                    line-height: 1.3;
+                }
+            }
+
+            #footer-banner {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                width: calc(100% + 20px);
+                background-color: var(--info-background);
+                color: var(--info-text);
+                text-align: center;
+                padding: var(--spacing);
+                outline: 1px solid #000000;
+                box-shadow: 0 -2px 10px #24242420, -10px 0 300px 50px #000000, 10px 0 30px 50px #000000, 0 10px 60px 50px #000000;
+                z-index: 1000;
+                transition: transform 0.3s ease-in-out;
+                transform: translateY(100%);
+            }
+
+            #footer-banner.active {
+                transform: translateY(0);
+            }
+
+            #footer-banner #footer-content {
+                width: 100%;
+                padding: var(--spacing);
+                margin-top: var(--foot-margin);
+                margin-bottom: 0rem;
+                padding-bottom: -10%;
+                text-align: left;
+                font-size: var(--testo-size);
+                line-height: 1;
+            }
+
+            footer .link-live,
+            footer .link-static {
+                display: none;
+            }
+
+            .link-live {
+                display: inline-block;
+                color: #00ff00;
+                font-weight: bold;
+                animation: blink 1s infinite;
+            }
+
+            .link-static {
+                display: inline-block;
+                color: var(--link-accent);
+                font-weight: normal;
+            }
+
+            body.static-page .link-live {
+                display: inline-block;
+            }
+
+            body.static-page .link-static {
+                display: none;
+            }
+
+            body.live-page .link-live {
+                display: none;
+            }
+
+            body.live-page .link-static {
+                display: inline-block;
+            }
+
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+            .roboto-100 {
+                font-family: var(--font-roboto);
+                font-weight: 100;
+            }
+
+            .roboto-400 {
+                font-family: var(--font-roboto);
+                font-weight: 400;
+            }
+
+            .roboto-700 {
+                font-family: var(--font-roboto);
+                font-weight: 700;
+            }
+
+            .roboto-900 {
+                font-family: var(--font-roboto);
+                font-weight: 900;
+            }
+
+            @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
+
+            .inconsolata-200 {
+                font-family: var(--font-inconsolata);
+                font-weight: 200;
+            }
+
+            .inconsolata-400 {
+                font-family: var(--font-inconsolata);
+                font-weight: 400;
+            }
+
+            .inconsolata-700 {
+                font-family: var(--font-inconsolata);
+                font-weight: 700;
+            }
+
+            .inconsolata-900 {
+                font-family: var(--font-inconsolata);
+                font-weight: 900;
+            }
+
+        /*-- ENDLINE & SAY BYE --*/
+
+
+
+        </style>
       
     </head>
 
