--- a/footer.html
+++ b/footer.html
@@ -23,14 +23,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 <!--// STARTLINE & SAY HI //--->
 
-    <p class="imp-p">
+    <p class="imp-p txt-mini">
         © 2025 GENiALABILE by seiseisette. All Rights Reserved.
          <!--
         © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
     -->
     </p>
-
     <!--MUST-->
         <p class="imp-p txt-mini">
             <a href="https://genialabile.com/previous-page" aria-label="Back">/<</a>
