--- a/footer.html
+++ b/footer.html
@@ -32,10 +32,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     </p>
     <!--MUST-->
         <p class="imp-p txt-mini">
-            <a href="https://genialabile.com/previous-page" aria-label="Back">/<</a>
+            <a href="https://genialabile.com/" class="link-static" aria-label="Home Static">◼︎</a>
             |
-            <a href="https://genialabile.com/" class="link-static" aria-label="Home Static">HOME</a>
-            <a href="https://genialabile.com/live" class="link-live" aria-label="Home Live"></a>LIVE</a>
+            <a href="https://genialabile.com/live" class="link-live" aria-label="Home Live"></a>▶︎</a>
             |
             <a href="https://genialabile.com/contacts" aria-label="Contact & Social">LINK</a>
             |
@@ -46,8 +45,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <a href="https://genialabile.com/privacy-policy" aria-label="Privacy Policy">PRIVACY</a>
             |
             <a href="https://genialabile.com/terms-and-conditions" aria-label="Terms & Conditions">USE</a>
-            |
-            <a href="https://genialabile.com/next-page" aria-label="Next">/></a>
+            
         </p>
     <!--MUST-->
 
