--- a/header.html
+++ b/header.html
@@ -68,13 +68,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
         </script>
     // Style effect graduated 
 
-     <!-- Redirect to SSL // -->
+   
         <script>
             if (location.protocol === 'http:') {
                 location.replace(`https://${location.hostname}${location.pathname}${location.search}`);
             }
         </script>
-    <!--// Redirect to SSL -->
+    // Redirect to SSL -->
     
 <!--// ENDLINE & SAY BYE //--->
 
