--- a/footer.html
+++ b/footer.html
@@ -34,9 +34,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <p class="imp-p txt-mini">
             <a href="https://genialabile.com/" class="link-static" aria-label="Home Static">◻︎</a>
             |
-            <a href="https://genialabile.com/live" class="link-live" aria-label="Home Live"></a>▻</a>
+            <a href="https://genialabile.com/live" class="link-live" aria-label="Home Live"></a></a>
             |
-            <a href="https://genialabile.com/contacts" aria-label="Contact & Social">LINK</a>
+            <a href="https://genialabile.com/contacts" aria-label="Contact & Social">CONTACT</a>
             |
             <a href="https://genialabile.com/accessibility" aria-label="Accessibility">ACCESS</a>
             |
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             |
             <a href="https://genialabile.com/privacy-policy" aria-label="Privacy Policy">PRIVACY</a>
             |
-            <a href="https://genialabile.com/terms-and-conditions" aria-label="Terms & Conditions">USE</a>
+            <a href="https://genialabile.com/terms-and-conditions" aria-label="Terms & Conditions">TERMS</a>
             
         </p>
     <!--MUST-->
