--- a/index.html
+++ b/index.html
@@ -28,62 +28,23 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity. Static version.">
         <link rel="canonical" href="https://genialabile.com/index.html">
     
-       <!-- header.html -->
-        <script>
-            document.addEventListener('DOMContentLoaded', function () {
-                const loadHeader = async () => {
-                    const MAX_RETRIES = 3; // Numero massimo di tentativi
-                    let attempt = 0;
-                    let success = false;
-
-                    while (attempt < MAX_RETRIES && !success) {
-                        try {
-                            console.log(`Tentativo ${attempt + 1} di caricamento dell'header`);
-                            const response = await fetch('https://genialabile.com/header.html', { cache: 'no-store' });
-
-                            if (!response.ok) {
-                                throw new Error(`Errore HTTP: ${response.status}`);
-                            }
-
-                            const headerContent = await response.text();
-                            document.querySelector('head').innerHTML += headerContent;
-                            success = true;
-                            console.log('Header caricato correttamente.');
-                        } catch (error) {
-                            console.error(`Errore durante il caricamento dell'header: ${error.message}`);
-                            attempt++;
-                        }
-                    }
-
-                    if (!success) {
-                        console.error('Impossibile caricare l\'header dopo diversi tentativi.');
-                        document.querySelector('head').innerHTML += `
-                            <meta charset="UTF-8">
-                            <meta name="viewport" content="width=device-width, initial-scale=1">
-                            <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-                            <meta name="color-scheme" content="dark">
-                            <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
-                            <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
-                            <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
-                            <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
-                        `;
-                        console.log('Fallback del contenuto dell\'header applicato.');
-                    }
-
-                    // Rendi visibile il contenuto del corpo
-                    document.body.style.visibility = "visible";
-                    document.body.style.opacity = "1";
-                };
-
-                // Nascondi temporaneamente il corpo per evitare flash di contenuto
-                document.body.style.visibility = "hidden";
-                document.body.style.opacity = "0";
-                document.body.style.transition = "opacity 0.5s ease-in-out";
-
-                // Avvia il caricamento
-                loadHeader();
-            });
-        </script>
+        <!-- header.html -->
+        <!-- header.html -->
+          <script>
+            fetch('https://genialabile.com/header.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.querySelector('head').innerHTML += data;
+                })
+                .catch(error => {
+                    console.error('Errore nel caricamento header:', error);
+                    document.querySelector('head').innerHTML += `
+                        <meta charset="UTF-8">
+                        <meta name="viewport" content="width=device-width, initial-scale=1">
+                    `;
+                });
+            </script>
+        <!-- header.html -->
         <!-- header.html -->
      
 
