centratura dell'header

--- a/footer.html
+++ b/footer.html
@@ -32,9 +32,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     </p>
     <!--MUST-->
         <p class="imp-p txt-mini">
-            <a href="https://genialabile.com/" class="link-static" aria-label="Home Static">◻︎</a>
+            <a href="https://genialabile.com/" class="link-static" aria-label="Home Static">⦿</a>
             |
-            <a href="https://genialabile.com/live" class="link-live" aria-label="Home Live"></a></a>
+            <a href="https://genialabile.com/live" class="link-live" aria-label="Home Live">◉</a>
             |
             <a href="https://genialabile.com/contacts" aria-label="Contact & Social">CONTACT</a>
             |
