--- a/footer.html
+++ b/footer.html
@@ -23,18 +23,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 <!--// STARTLINE & SAY HI //--->
 
-    <p class="imp-p txt-mini">
-        © 2025 GENiALABILE by seiseisette. All Rights Reserved.
-         <!--
-        © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
-        Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
-    -->
-    </p>
-    <!--MUST-->
+    <!-- MUST -->
         <p class="imp-p txt-mini">
-            <a href="https://genialabile.com/" class="link-static" aria-label="Home Static">⦿</a>
+            <a href="https://genialabile.com/" class="link-static" aria-label="Home Static">STATIC</a>
             |
-            <a href="https://genialabile.com/live" class="link-live" aria-label="Home Live">◉</a>
+            <a href="https://genialabile.com/live" class="link-live" aria-label="Home Live">LIVE</a>
             |
             <a href="https://genialabile.com/contacts" aria-label="Contact & Social">CONTACT</a>
             |
@@ -47,6 +40,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <a href="https://genialabile.com/terms-and-conditions" aria-label="Terms & Conditions">TERMS</a>
             
         </p>
-    <!--MUST-->
+    <!-- MUST -->
+    
+    <!-- COPY -->
+        <p class="imp-p txt-mini">
+            © 2025 GENiALABILE by seiseisette. All Rights Reserved.
+            <!--
+            © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
+            Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
+        -->
+        </p>
+     <!-- COPY -->
 
 <!---// ENDLINE & SAY BYE //--->
