--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 Genialabile supports users in managing emotions, achieving personal growth, and developing skills.
                 It offers multidimensional simulations, strategic brainstorming, and visual tools to translate complex concepts into practical experiences.
                 <br>
-                Whether it’s business planning, emotional support, or interdisciplinary learning, GENiALABILE excels in bridging heart and mind.
+                Whether it’s business planning, emotional support, or interdisciplinary learning, Genialabile excels in bridging heart and mind.
             </p>
 
             <h3>
