--- a/footer.html
+++ b/footer.html
@@ -24,7 +24,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!--// STARTLINE & SAY HI //--->
 
     <!-- MUST -->
-        <p class="imp-p txt-mini">
+        <p class="imp-p txt-mini" id="footer-text">
             <a href="https://genialabile.com/" class="link-static" aria-label="Home Static">STATIC</a>
             |
             <a href="https://genialabile.com/live" class="link-live" aria-label="Home Live">LIVE</a>
@@ -43,7 +43,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <!-- MUST -->
     
     <!-- COPY -->
-        <p class="imp-p txt-mini">
+        <p class="imp-p txt-mini" id="footer-text">
             © 2025 GENiALABILE by seiseisette. All Rights Reserved.
             <!--
             © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
