Migliora la coerenza visiva e aggiunge emoji ai titoli per un impatto maggiore

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
             <p>
             <h3>
-                Inspire
+                💡 Inspire:
             </h3>
                 Multidimensional solutions and unlocking creative potential.
                 It is an advanced Artificial Intelligence framework-system, a multidimensional Feedback-GPT designed to be a bio-virtual mentor.
@@ -71,7 +71,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </p>
 
             <h3>
-                Combine
+                🧠 Combine:
             </h3>
             <p>
                 Predictive intelligence, logic, and creativity to deliver tailored answers, analyses, and solutions.
@@ -82,7 +82,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </p>
 
             <h3>
-                Began
+                🌱 Began:
             </h3> 
             <p>
                 As a pilot project with its first version, focusing on internal tests and selected beta testers.
@@ -93,7 +93,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </p>
 
             <h3>
-                Global
+                🌍 Global:
             </h3>
             <p>
                 Accessible online via platforms such as ChatGPT by OpenAI.
@@ -105,7 +105,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </p>
 
             <h3>
-                Revolutionary
+                🚀 Revolutionary:
             </h3>
             <p>
                The artificial intelligencec creativity, transforming it into a trusted-virtual mentor that doesn’t just provide answers but inspires, guides, and stimulates human creativity.
@@ -117,7 +117,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </p>
 
             <h3>
-                Hybrid
+                🤖 Hybrid:
             </h3>
             <p>
                 Advanced model, ensuring security, scalability learning-model, and accessibility.
@@ -130,7 +130,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 
             <h3>
-                Genius
+                🧞‍♂️ Genius:
             </h3>
             <p>
                 It understands the user's mood with just a few words to be more human-aligned, it surprises the user and stands apart from standard personalized GPT models.
