--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <html lang="en">
     <head>
         <title>GENiALABILE | Home</title>
-        <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity. Static version.">
+        <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity. Static Home Page Pitch.">
         <link rel="canonical" href="https://genialabile.com/index.html">
         
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
@@ -50,8 +50,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
       
     </head>
 
-    <body class="static-page live-page" 
-    style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
+    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
                 <a href="https://genialabile.com/" aria-label="Home Page | Static">
