Aggiorna il link nella sezione header della pagina live

--- a/live.html
+++ b/live.html
@@ -66,7 +66,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 
             <h1>
-                <a href="https://genialabile.com/writer" aria-label="Gen-IA | Writer">
+                <a href="https://genialabile.com/live" aria-label="Gen-IA | Writer">
                     GENiALABILE
                 </a>
             </h1>
