--- a/contacts.html
+++ b/contacts.html
@@ -154,7 +154,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             <br>
                             Multidimensional Ave,
                             <br>
-                            <a href="https://openai.com/">OpenAI</a> City, API, 2025
+                            <a href="https://openai.com/">GPT's</a> City, AI, 2025
                         </p>
                     </div>
                 </div>
