--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     <!-- MUST -->
         <p class="imp-p txt-mini" id="footer-text">
-            <a href="https://genialabile.com/" class="link-static" aria-label="Genialabile Static Home Page">[■]</a>
+            <a href="https://genialabile.com/" class="link-static" aria-label="Genialabile Static Home Page">[x]</a>
             |
             <a href="https://genialabile.com/live" class="link-live" aria-label="Genialabile Live Home Page">[>]</a>
             |
