Aggiorna la sezione "Inspire" con una nuova linea orizzontale e modifica lo stile del testo; aggiungi una classe CSS per la linea sottile

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
 
             <p>
-                <h3>
+                <h3 font-weight: normal;>
                     💡 Inspire:
                 </h3>
+                    <hr class="thin-line">
                     Multidimensional solutions and unlocking creative potential.
                     It is an advanced Artificial Intelligence framework-system, a multidimensional Feedback-GPT designed to be a bio-virtual mentor.
                     It provides innovative solutions and personalized support across a wide range of fields, from learning and creativity to the resolution of complex problems.
