--- a/footer.html
+++ b/footer.html
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     
     <!-- COPY -->
         <p class="imp-p txt-mini" id="footer-text">
-            © 2025 GENiALABILE by seiseisette. All Rights Reserved.
+            © 2025 Genialabile. All Rights Reserved.
             <!--
             © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
             Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
