Modifica il titolo della sezione "Inspire" rimuovendo lo stile inline e aggiorna lo stile del testo nel CSS

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
 
             <p>
-                <h3 style="font-weight: normal";>
-                    💡 Inspire:
+                <h3>
+                    💡 Inspire
                 </h3>
                 <hr class="thin-line">
                     Multidimensional solutions and unlocking creative potential.
