Aggiorna il titolo della sezione "Inspire" rimuovendo lo stile inline e modifica la spaziatura nel CSS

--- a/footer.html
+++ b/footer.html
@@ -24,7 +24,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!--// STARTLINE & SAY HI //--->
 
     <!-- MUST -->
-        <p class="imp-p txt-mini" id="footer-text">
+        <p class="imp-p txt-mini" id="footer-text footer-banner">
             <a href="https://genialabile.com/" class="link-static" aria-label="Genialabile Static Home Page">[x]</a>
             |
             <a href="https://genialabile.com/live" class="link-live" aria-label="Genialabile Live Home Page">[>]</a>
@@ -43,7 +43,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <!-- MUST -->
     
     <!-- COPY -->
-        <p class="imp-p txt-mini" id="footer-text">
+        <p class="imp-p txt-mini" id="footer-text footer-banner">
             © 2025 Genialabile. All Rights Reserved.
             <!--
             © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
