Rimuovi lo stile inline dai titoli delle sezioni e migliora la formattazione

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             <p>
                 <h3 style="font-weight: normal";>
-                    🧠 Combine:
+                    🧠 Combine
                 </h3>
                 <hr class="thin-line">
                     Predictive intelligence, logic, and creativity to deliver tailored answers, analyses, and solutions.
@@ -78,7 +78,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             <p>
                 <h3 style="font-weight: normal";>
-                    🌱 Began:
+                    🌱 Began
                 </h3> 
                 <hr class="thin-line">
                     As a pilot project with its first version, focusing on internal tests and selected beta testers.
@@ -90,7 +90,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             <p>
                 <h3 style="font-weight: normal";>
-                    🌍 Global:
+                    🌍 Global
                 </h3>
                 <hr class="thin-line">
                     Accessible online via platforms such as ChatGPT by OpenAI.
@@ -104,7 +104,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             <p>
                 <h3 style="font-weight: normal";>
-                    🚀 Revolutionary:
+                    🚀 Revolutionary
                 </h3>
                 <hr class="thin-line">
                     The artificial intelligencec creativity, transforming it into a trusted-virtual mentor that doesn’t just provide answers but inspires, guides, and stimulates human creativity.
@@ -118,7 +118,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             <p>
                 <h3 style="font-weight: normal";>
-                    🤖 Hybrid:
+                    🤖 Hybrid
                 </h3>
                 <hr class="thin-line">
                     Advanced model, ensuring security, scalability learning-model, and accessibility.
@@ -133,7 +133,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             <p>
                 <h3 style="font-weight: normal";>
-                    🧞‍♂️ Genius:
+                    🧞‍♂️ Genius
                 </h3>
                 <hr class="thin-line">
                     It understands the user's mood with just a few words to be more human-aligned, it surprises the user and stands apart from standard personalized GPT models.
