Aggiorna la versione e correggi l'URL nel file live.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             </h1>
 
             <div>
-                <div></div>
+                <div><br></div>
                 <p>
                     <h3>
                         💡 Inspire
