--- a/live.html
+++ b/live.html
@@ -16,8 +16,8 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v2.1
-# URL: https://genialabile.com/live.html (live < write)r
+# Version: v3.o
+# URL: https://genialabile.com/live.html (live < writer)
 ===============================================================================
 -->
 
