spacing su static + rezixe writer-txt ombre OG

--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     GENiALABILE
                 </a>
             </h1>
-
-            <div>
-                <div><br></div>
+            <spacing>
                 <p>
                     <h3>
                         💡 Inspire
@@ -103,7 +101,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         Helping people develop their mind and soul, improving the world through personal, emotional, and intellectual growth.
                 </p>
 
-
                 <p>
                     <h3 style="font-weight: normal";>
                         🚀 Revolutionary
@@ -116,7 +113,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         The mission is to make complex knowledge accessible and to support each user in achieving their full potential.
                         It adapts and understands human nature.
                 </p>
-
 
                 <p>
                     <h3 style="font-weight: normal";>
@@ -131,8 +127,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         It is a guide and mentor, a great teacher, fostering personal and intellectual growth through multidimensional reasoning.
                 </p>
 
-
-
                 <p>
                     <h3 style="font-weight: normal";>
                         🧞‍♂️ Genius
@@ -144,7 +138,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         <br>
                         It does not merely provide temporary fixes but resolves issues while enabling users to learn ten times more than necessary to address them in isolation.
                 </p>
-            </div>
+            </spacing>
             
             <!--
             <h3>
