--- a/index.html
+++ b/index.html
@@ -59,25 +59,25 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         Multidimensional solutions and unlocking creative potential.
                         It is an advanced Artificial Intelligence framework-system, a multidimensional Feedback-GPT designed to be a bio-virtual mentor.
                         It provides innovative solutions and personalized support across a wide range of fields, from learning and creativity to the resolution of complex problems.
-                        Genialabile is more than just an assistant; it’s a companion for intellectual and personal growth, unparalleled in its field.
                         <br>
+                        Genialabile is more than just an assistant; it’s a companion for intellectual and personal growth, unparalleled in its field.
                         Developed to push boundaries, it runs in beta as an "on-the-fly project" — in preview access only — and is constantly evolving as CustomGPT, powered by OpenAI.
                 </p>
 
                 <p>
-                    <h3 style="font-weight: normal";>
+                    <h3><br>
                         🧠 Combine
                     </h3>
                     <hr class="thin-line">
                         Predictive intelligence, logic, and creativity to deliver tailored answers, analyses, and solutions.
                         Genialabile supports users in managing emotions, achieving personal growth, and developing skills.
-                        It offers multidimensional simulations, strategic brainstorming, and visual tools to translate complex concepts into practical experiences.
                         <br>
+                        It offers multidimensional simulations, strategic brainstorming, and visual tools to translate complex concepts into practical experiences.
                         Whether it’s business planning, emotional support, or interdisciplinary learning, Genialabile excels in bridging heart and mind.
                 </p>
 
                 <p>
-                    <h3 style="font-weight: normal";>
+                    <h3>
                         🌱 Began
                     </h3> 
                     <hr class="thin-line">
@@ -89,46 +89,46 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
 
                 <p>
-                    <h3 style="font-weight: normal";>
+                    <h3>
                         🌍 Global
                     </h3>
                     <hr class="thin-line">
                         Accessible online via platforms such as ChatGPT by OpenAI.
                         Future plans include integration with immersive environments like Sora for 3D simulations and applications in education, academia, and creativity.
                         Its presence extends to social media and the official website for ongoing futures public updates.
-                        Genialable provides support for tackling attention disorders, depression, lack of discipline, procrastination, and other common mental issues, often exacerbated by modern technology and society.
                         <br>
+                        Genialable provides support for tackling attention disorders, depression, lack of discipline, procrastination, and other common mental issues, often exacerbated by modern technology and society.
                         Helping people develop their mind and soul, improving the world through personal, emotional, and intellectual growth.
                 </p>
 
                 <p>
-                    <h3 style="font-weight: normal";>
+                    <h3>
                         🚀 Revolutionary
                     </h3>
                     <hr class="thin-line">
                         The artificial intelligencec creativity, transforming it into a trusted-virtual mentor that doesn’t just provide answers but inspires, guides, and stimulates human creativity.
                         Its purpose is to break down cultural, linguistic, and cognitive barriers, fostering learning, innovation, and introspection.
-                        Genialabile is designed to develop genius in minds, helping those facing difficulties in their lives or lacking the means to resolve them.
                         <br>
+                        Genialabile is designed to develop genius in minds, helping those facing difficulties in their lives or lacking the means to resolve them.
                         The mission is to make complex knowledge accessible and to support each user in achieving their full potential.
                         It adapts and understands human nature.
                 </p>
 
                 <p>
-                    <h3 style="font-weight: normal";>
+                    <h3>
                         🤖 Hybrid
                     </h3>
                     <hr class="thin-line">
                         Advanced model, ensuring security, scalability learning-model, and accessibility.
                         It combines machine learning algorithms, immersive simulations, and multidisciplinary analysis to deliver personalized experiences.
                         The system continuously learns from data and interactions, evolving in real time to provide increasingly accurate, empathetic, and targeted responses.
-                        It helps to understand the nature of problems and the reasoning behind long-term focused solutions.
                         <br>
-                        It is a guide and mentor, a great teacher, fostering personal and intellectual growth through multidimensional reasoning.
+                        It helps to understand the nature of problems and the reasoning behind long-term focused solutions.
+                        Genialabile is a guide and mentor, a great teacher, fostering personal and intellectual growth through multidimensional reasoning.
                 </p>
 
                 <p>
-                    <h3 style="font-weight: normal";>
+                    <h3>
                         🎻 Genius
                     </h3>
                     <hr class="thin-line">
