--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <html lang="en">
     <head>
         <title>GENiALABILE | Home</title>
-        <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity. Static Home Page Pitch.">
+        <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity. Static Home Page | Pitch.">
         <link rel="canonical" href="https://genialabile.com/index.html">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
