--- a/gpt.html
+++ b/gpt.html
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com/live" aria-label="Home Page | Live">
+                <a href="https://genialabile.com/gpt" aria-label="Home Page | Live">
                     GENiALABILE
                 </a>
             </h1>
