Aggiornato il link nella sezione footer.html

--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     <!-- MUST -->
         <p id="footer-text footer-banner">
-            <a href="https://genialabile.com/live" class="link-live" aria-label="Genialabile Live Home Page">◉</a>
+            <a href="https://genialabile.com/gpt" class="link-live" aria-label="Genialabile Live Home Page">◉</a>
             |
             <a href="https://genialabile.com/contacts" class="imp-p" aria-label="Contact & Social">CONTACT</a>
             |
