Override Access.HTML

--- a/MODEL_3.0 copy.html
+++ b/MODEL_3.0 copy.html
@@ -17,16 +17,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v3.0 (160125)
-# URL: https://genialabile.com/contacts.html
+# URL: https://genialabile.com/accessibility.html
 ===============================================================================
 -->
 <!-- START -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Genialabile | Contacts</title>
-        <meta name="description" content="Genialabile - Contacts & Social Media and Credits">
-        <link rel="canonical" href="https://genialabile.com/contacts.html">
+        <title>Genialabile | Accessibility</title>
+        <meta name="description" content="Genialabile - Accessibility Front Statement.">
+        <link rel="canonical" href="https://genialabile.com/accessibility.html">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                CONTACT & LiNKS
+                ACCESSIBILITY STATEMENT
             </h1>
             <div class="imp-l">
                 <p>
@@ -52,97 +52,72 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🎗️ Welcome
                     </h3>
                     <hr class="thin-line">
-                        If you have any questions, feedback, or inquiries about Genialabile, feel free to reach out to us using the information below.
-                        <br>
-                        <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!">Join</a>
-                        in our preview access for beta tester.
+                        Genialabile is committed to providing a website that is accessible to all users, including individuals with disabilities.
+                        We strive to ensure our platform meets or exceeds the requirements of applicable laws.
+                        Including the California Consumer Privacy Act (CCPA) and the Americans with Disabilities Act (ADA).
                 </p>
                 <p>
                     <h3><br>
-                        🌐 Website
+                        🔬 Features supporting accessibility
                     </h3>
                     <hr class="thin-line">
-                        Live: 
-                        <a href="https://genialabile.com/gpt">genialabile.com/gpt</a>
-                        <a href="https://genialabile.com/gpt" class="link-live" style="color: #00bbff;" ><b>·</b></a>
-                        <br><br>
-                        Static: 
-                        <a href="https://genialabile.com/">genialabile.com</a>
-                        <div class="link-static"><a href="https://genialabile.com/" class="link-static" style="color: #ffbbff;"><b>·</b></a></div>
+                    We have implemented the following features to enhance accessibility:
+                    <br><br>
+                    # High contrast design for better readability.
+                    <br><br>
+                    # Color contrast adjustments for better readability.
+                    <br><br>
+                    # Screen reader compatibility for visually impaired users.
+                    <!--
+                    <br><br>
+                    [·] Screen reader compatibility for visually impaired users.
+                    [·] Keyboard navigation for users without a mouse.
+                    <br><br>
+                    [·] Text scaling support for users with visual difficulties.
+                    <br><br>
+                    [·] Screen reader compatibility for visually impaired users.
+                     [·] Keyboard navigation for users without a mouse.
+                    <br><br>
+                    [·] Text scaling support for users with visual difficulties.
+                    <br>-->
                 </p>
                 <p>
                     <h3><br>
-                        ✉️ Emails
+                        🚜 Tools and limitations
+                    </h3>
+                    <hr class="thin-line">
+                        We are working to ensure these services are accessible but cannot guarantee full compliance, with the best efforts as possible.
+                        Taking care for every user, we are committed to providing a platform that is accessible to all.
+                </p>
+                <p>
+                    <h3><br>
+                        🎙️ Continuous improvements
+                    </h3>
+                    <hr class="thin-line">
+                    Genialabile continuously monitors accessibility standards and makes updates where necessary.
+                    Your feedback is invaluable to us. If you have suggestions or notice issues, feel free to contact us.
+                </p>
+                <p>
+                    <h3><br>
+                        📮 How to request assistance
                     </h3> 
                     <hr class="thin-line">
                         Gen:
                         <a href="mailto:info@genialabile.com?subject=Contact%20Request">info@genialabile.com</a>
                         <i>(limited uptime)</i>
-                    <br><br>
+                        <br><br>
                         Gmail:
                         <a href="mailto:genialabile@gmail.com?subject=Contact%20Request">
                             genialabile@gmail.com
                         </a>
                 </p>
-                <p>
-                    <h3><br>
-                        👻 Social
-                    </h3>
-                    <hr class="thin-line">
-                        Twitter—X.com/<a href="https://x.com/genialabile/">genialabile</a>
-                        <br><br>
-                        YouTube.com/<a href="https://youtube.com/@genialabile/">@genialabile</a>
-                        <br><br>
-                        Instagram.com/<a href="https://instagram.com/genialabile/">genialabile</a>
-                        <br><br>
-                        Threads.net/<a href="https://threads.net/@genialabile/">@genialabile</a>
-                        <!--<br><br>
-                        LinkedIn.com/ 
-                        <a href="https://linkedin.com/company/genialabile">genialabile</a>-->
-                </p>
-                <p>
-                    <h3><br>
-                        👾 Credits
-                    </h3>
-                    <hr class="thin-line">
-                        Develop & Designed by
-                        <a href="https://x.com/seiseisette/">seiseisette</a>
-                        <br><br>
-                        Website Hosted by GitHub Pages:
-                        <a href="https://github.com/seiseisette/Gen-IA/">Gen-IA</a>
-                        <br><br>
-                        Genialabile available on ChatGPT. Powered by
-                        <a href="https://openai.com/">OpenAI</a>
-                        <br><br>
-                        Concept & AI-Framework designed by seiseisette.
-                        <br>
-                        © 2025 Genialabile. All Rights Reserved.
-                        <br>
-                        ORCID:
-                        <a href="https://orcid.org/0009-0002-6309-2937"
-                        target="_blank" rel="noopener noreferrer" style="width: normal; color: #f4f4f4;">0009-0002-6309-2937</a>
-                </p>
-                <p>
-                    <h3><br>
-                        ❤️ Thanks
-                    </h3>
-                    <hr class="thin-line">
-                        <div class="card">
-                            <div class="card-image-container">
-                                <img src="https://genialabile.com/gen-fav-rd.png?v=2" alt="GENiALABILE Logo" class="card-image" loading="lazy">
-                            </div>
-                            <div class="card-text">
-                                <p class="imp-p">
-                                    GENiALABILE <span style="font-family:'Inconsolata', monospace;"> *⌝</span>
-                                    <br>
-                                    Multidimensional Ave,
-                                    <br>
-                                    GPT's</a> City, AI, 2025
-                                </p>
-                            </div>
-                        </div>
-                </p>
             </div>
+            <br>
+            <p class="txt-mini">
+                * * *
+                <br>
+                Last Updated: 16 January 2025
+            </p>
         </main>
         <!-- TRICK -->
             <div id="footer-banner">
