--- a/contacts.html
+++ b/contacts.html
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                CONTACT & LiNKS
+                CONTACT & CREDITS
             </h1>
             <div class="imp-l">
                 <p>
@@ -72,7 +72,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </p>
                 <p>
                     <h3><br>
-                        ✉️ Emails
+                        ✉️ Email
                     </h3> 
                     <hr class="thin-line">
                         Gen:
