--- a/gpt.html
+++ b/gpt.html
@@ -16,7 +16,7 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.o
+# Version: v3.o (160125)
 # URL: https://genialabile.com/gpt.html (gpt < live < writer)
 ===============================================================================
 -->
@@ -25,7 +25,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <html lang="en">
     <head>
         <title>Genilabile | GPT</title>
-        <meta name="description" content="GENiALABILE - Advanced-GPT Project designed to inspire multidimensional solutions and unlock creativity. Live Home Page | Pitch.">
+        <meta name="description" content="GENiALABILE - Advanced GPT Project designed to inspire multidimensional solutions and unlock creativity. Live Home Page | Pitch.">
         <link rel="canonical" href="https://genialabile.com/gpt.html">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
