--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -160,6 +160,32 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </a>    
             </p>
 
+
+            <h3>
+                Performance
+            </h3>
+            <p>
+                It is not just a technology—it is a living ecosystem that is constantly evolving.
+                Optimized for premium OpenAI plans, as a sophisticated GPT using the most powerful and advanced model available.
+                Ensuring the management of higher token counts in input and output for extended conversational experiences:
+                <br> <br>
+                If users encounter issues with the management of OpenAI-ChatGPTas "free plan",
+                Genialabile will offer a "slim" version of responses, analyses, and reduced computational capabilities.
+                <br> <br>
+                If users request the maximum performance - allowed -
+                Genialabile will utilize its full potential while adhering to security protocols authentication to unlock full potential, and unlimited interaction.
+                <br> <br>
+                This feature is currently available exclusively to beta testers and individuals meeting specific participation criteria, ensuring a tailored and focused experience aligned with their unique needs.
+                Standard users could have limited number interactions with it.
+                <br>
+                - - -
+                <br>
+                The "Gen-Code" to unlock the number of interactions still limited by OpenAI user plan.
+            </p>
+
+
+
+
         </main>
 
         <!-- FADE --> 
