Cookie.HTML redo

--- a/contacts.html
+++ b/contacts.html
@@ -80,9 +80,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         <i>(limited uptime)</i>
                     <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request">
-                            genialabile@gmail.com
-                        </a>
+                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request">genialabile@gmail.com</a>
                 </p>
                 <p>
                     <h3><br>
