--- a/MODEL_3.0 copy.html
+++ b/MODEL_3.0 copy.html
@@ -17,16 +17,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v3.0 (160125)
-# URL: https://genialabile.com/accessibility.html
+# URL: https://genialabile.com/genialabile-gpt-access.html
 ===============================================================================
 -->
 <!-- START -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Genialabile | Accessibility</title>
-        <meta name="description" content="Genialabile - Accessibility Front Statement.">
-        <link rel="canonical" href="https://genialabile.com/accessibility.html">
+        <title>Genialabile | GPT-Access</title>
+        <meta name="description" content="Genialabile - GPT-Access designed for Genialabile & Co.">
+        <link rel="canonical" href="https://genialabile.com/genialabile-gpt-access.html">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                ACCESSIBILITY STATEMENT
+                GPT ACCESS
             </h1>
             <div class="imp-l">
                 <p>
@@ -52,62 +52,112 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🎗️ Welcome
                     </h3>
                     <hr class="thin-line">
-                        Genialabile is committed to providing a website that is accessible to all users, including individuals with disabilities.
-                        We strive to ensure our platform meets or exceeds the requirements of applicable laws.
-                        Including the California Consumer Privacy Act (CCPA) and the Americans with Disabilities Act (ADA).
+                        Hello Genialabile!
                 </p>
                 <p>
                     <h3><br>
-                        🔬 Features supporting accessibility
+                        🍪 What are cookies
                     </h3>
                     <hr class="thin-line">
-                    We have implemented the following features to enhance accessibility:
-                    <br><br>
-                    # High contrast design for better readability.
-                    <br><br>
-                    # Color contrast adjustments for better readability.
-                    <br><br>
-                    # Screen reader compatibility for visually impaired users.
-                    <!--
-                    <br><br>
-                    [·] Screen reader compatibility for visually impaired users.
-                    [·] Keyboard navigation for users without a mouse.
-                    <br><br>
-                    [·] Text scaling support for users with visual difficulties.
-                    <br><br>
-                    [·] Screen reader compatibility for visually impaired users.
-                     [·] Keyboard navigation for users without a mouse.
-                    <br><br>
-                    [·] Text scaling support for users with visual difficulties.
-                    <br>-->
+                        Cookies are small text files placed on your device by websites you visit.<br>
+                        They serve purposes such as remembering your preferences, enabling functionality, and collecting data for analytics.
                 </p>
                 <p>
                     <h3><br>
-                        🚜 Tools and limitations
+                        🥠 Type of cookies we only use
                     </h3>
                     <hr class="thin-line">
-                        We are working to ensure these services are accessible but cannot guarantee full compliance, with the best efforts as possible.
-                        Taking care for every user, we are committed to providing a platform that is accessible to all.
+                        Essential Cookies: the minimum required for the operation of our website.<br>
+                        These cookies cannot be disabled.
                 </p>
                 <p>
                     <h3><br>
-                        🎙️ Continuous improvements
+                        🍕 Why we do not use cookies
                     </h3>
                     <hr class="thin-line">
-                    Genialabile continuously monitors accessibility standards and makes updates where necessary.
-                    Your feedback is invaluable to us. If you have suggestions or notice issues, feel free to contact us.
+                        #  We do not enhance functionality or provide personalized experiences.
+                        <br><br>
+                        # We do not analyze traffic with tools like Google Analytics.
+                        <br><br>
+                        # We do not display personalized ads or targeted content.
                 </p>
                 <p>
                     <h3><br>
-                        📮 How to request assistance
+                        🍝 Managing your cookies in others website 
+                    </h3>
+                    <hr class="thin-line">
+                        You have the right to manage your cookie preferences.
+                        Adjust your browser settings to block or delete cookies.
+                        Use platforms like:
+                        <br><br>
+                        # <a href="https://www.youronlinechoices.com/" target="_blank">Your Online Choices</a> (EU).
+                        <br><br>
+                        # <a href="https://optout.aboutads.info/" target="_blank">YourAdChoices</a> (US).
+                        <br><br>
+                        Disable Google Analytics tracking via 
+                        <a href="https://tools.google.com/dlpage/gaoptout" target="_blank">Google Analytics Opt-Out Add-on</a>.
+                </p>
+                <p>
+                    <h3><br>
+                        🥪 Cookies do not used on this website 
+                    </h3>
+                    <hr class="thin-line">
+                        Below is a list of the cookies we do not use:
+                        <br><br>
+                        # Session Cookies:
+                        <br>
+                        Temporary cookies that expire when you close your browser.
+                        <br><br>
+                        # Persistent Cookies:
+                        <br>
+                        Remain on your device until deleted manually or automatically after a defined period.
+                        <br><br>
+                        # Third-Party Cookies:
+                        <br>
+                        Set by external services like Google Analytics or social media platforms.
+                        <!--<a href="https://tools.google.com/dlpage/gaoptout" target="_blank">Google Analytics Opt-Out Add-on</a>.
+                        -->
+                </p>
+                <p>
+                    <h3><br>
+                        🔑 Data protection
+                    </h3>
+                    <hr class="thin-line">
+                        All data collected via cookies is anonymized wherever possible.
+                        <br>
+                        Personal data processed through cookies complies with applicable laws, including GDPR (EU) and CCPA (US).
+                </p>
+                <p>
+                    <h3><br>
+                        🌺 Updates to this policy
+                    </h3>
+                    <hr class="thin-line">
+                        We reserve the right to update this Cookie Policy.
+                        <br>
+                        Changes will be effective upon posting, and the "Last Updated" date will be revised accordingly.
+                </p>
+                <p>
+                    <h3><br>
+                        ⚠️ Disagree with this policy
+                    </h3>
+                    <hr class="thin-line">
+                        If you do not agree with the use of cookies, you may disable them using the dedicated options or exit cookie's website immediately.
+                        <br><br>
+                        Continuing to use this website implies consent to Cookie Policy.
+                </p>
+                <p>
+                    <h3><br>
+                        📮 About cookies we use
                     </h3> 
                     <hr class="thin-line">
+                        If you have any questions or concerns about our use of cookies, please contact us at:
+                        <br><br>
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Contact%20Request">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Cookie%20policy">info@genialabile.com</a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request">
+                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20policy"">
                             genialabile@gmail.com
                         </a>
                 </p>
